# atlas-examples

./: .envrc  .gitignore
dex1/: .envrc  config.min.json  config.min.preprod.json  config.min.preview.json  dex1.cabal  swagger-api.json
dex1/onchain/BetRef/OnChain/: BetRef.hs
dex1/onchain/BetRef/OnChain/BetRef/: Compiled.hs
dex1/onchain/Dex/OnChain/: Token.hs
dex1/onchain/Dex/OnChain/Dex/: Compiled.hs
dex1/onchain/Dex/OnChain/Uniswap/: OnChain.hs  Pool.hs  Types.hs
dex1/onchain/Dex/OnChain/Uniswap/Uniswap/: Compiled.hs
dex1/server/: dex-server-main.hs
dex1/server-lib/BetRef/Api/: BetRef.hs  Context.hs
dex1/server-lib/Dex/Api/: Context.hs  Dex.hs  Operations.hs  Scripts.hs
dex1/tests/BetRef/Tests/: PlaceBet.hs  TakeBetPot.hs
dex1/tests/Dex/Tests/: CreateToken.hs
