cabal-version:      3.6
name:               dex1 
version:            0.1.0

common dex-common
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TypeFamilies
    UndecidableInstances
    ViewPatterns
    
  ghc-options:        -Wall -Wincomplete-uni-patterns -Wunused-packages

  ghc-options:        -fno-show-valid-hole-fits

common plutus-ghc-options
  -- so unfoldings are present even when compiled without optmizations
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -Wno-partial-type-signatures

  -- expose all unfoldings, so plutustx compiler can do its job
  ghc-options:
    -fexpose-all-unfoldings -fobject-code
    -fplugin-opt PlutusTx.Plugin:defer-errors

  -- set target plutus-core version
  ghc-options: -fplugin-opt PlutusTx.Plugin:target-version=1.0.0


common betref-common
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    DeriveAnyClass
    DeriveGeneric
    DataKinds
    OverloadedStrings
    TypeApplications
    RecordWildCards
    TypeOperators
    NamedFieldPuns
    NumericUnderscores
    StandaloneDeriving
    ScopedTypeVariables
    DeriveFoldable
    DeriveFunctor
    DeriveLift
    DeriveTraversable
    GeneralizedNewtypeDeriving

    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    RoleAnnotations
    TypeFamilies
    UndecidableInstances
    ViewPatterns
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wunused-packages -Wall -Wunticked-promoted-constructors
  ghc-options: -haddock -fno-show-valid-hole-fits

library dex-onchain
  import:           dex-common, plutus-ghc-options
  hs-source-dirs:   onchain
  exposed-modules:
    Dex.OnChain.Token
    Dex.OnChain.Dex.Compiled
    Dex.OnChain.Uniswap.OnChain
    Dex.OnChain.Uniswap.Pool
    Dex.OnChain.Uniswap.Types
    Dex.OnChain.Uniswap.Uniswap.Compiled

  build-depends:
    , base
    , aeson
    , openapi3
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , lens
    , serialise
    , bytestring
    , hashable
    , containers
    , semigroups
    , deepseq
    , template-haskell                      >=2.13.0.0

library betref-onchain
  import:           betref-common, plutus-ghc-options

  -- so unfoldings are present even when compiled without optmizations
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -Wno-partial-type-signatures
  ghc-options: -haddock 

  -- expose all unfoldings, so plutustx compiler can do its job
  ghc-options:      -fexpose-all-unfoldings -fobject-code -fplugin-opt PlutusTx.Plugin:defer-errors
  hs-source-dirs:   onchain
  exposed-modules:
    BetRef.OnChain.BetRef
    BetRef.OnChain.BetRef.Compiled

  build-depends:
    , base
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

library dex-server-lib
  import:           dex-common
  ghc-options: -haddock 
  hs-source-dirs:   server-lib
  exposed-modules:
    Dex.Api.Api
    Dex.Api.Context
    Dex.Api.Dex
    Dex.Api.Operations
    Dex.Api.Scripts
    Dex.Api.Tx

  build-depends:
    , plutus-ledger-api
    , base
    , aeson
    , dex1:dex-onchain
    , atlas-cardano
    , swagger2
    , servant-server
    , servant-swagger
    , containers
    , text

library betref-server-lib
  import:           betref-common
  ghc-options: -haddock 
  hs-source-dirs:   server-lib
  exposed-modules:
    BetRef.Api.Api
    BetRef.Api.BetRef
    BetRef.Api.Context
    BetRef.Api.Operations
    BetRef.Api.Tx

  build-depends:
    , base
    , aeson
    , dex1:betref-onchain
    , atlas-cardano
    , swagger2
    , servant-server
    , servant-swagger
    , containers
    , text

executable dex-server
  import:           dex-common
  default-language: Haskell2010
  hs-source-dirs:   server
  main-is:          dex-server-main.hs
  ghc-options:
    -O2 -threaded -rtsopts -with-rtsopts=-T -fplugin-opt
    PlutusTx.Plugin:defer-errors
  ghc-options: -haddock 

  build-depends:
    , aeson-pretty
    , base
    , bytestring
    , atlas-cardano
    , dex1:dex-server-lib
    , servant-server
    , transformers
    , wai
    , wai-cors
    , http-types
    , warp

executable betref-server
  import:           betref-common
  default-language: Haskell2010
  hs-source-dirs:   server
  main-is:          server-main.hs
  ghc-options:
    -O2 -threaded -rtsopts -with-rtsopts=-T -fplugin-opt
    PlutusTx.Plugin:defer-errors
  ghc-options: -haddock 

  build-depends:
    , aeson-pretty
    , base
    , bytestring
    , atlas-cardano
    , dex1:betref-server-lib
    , servant-server
    , transformers
    , wai
    , wai-cors
    , http-types
    , warp

test-suite dex-tests
  import:         dex-common
  ghc-options:    -threaded -rtsopts
  type:           exitcode-stdio-1.0
  main-is:        dex-tests.hs
  hs-source-dirs: tests
  other-modules:
    Dex.Tests.CreateToken

  build-depends:
    , base
    , containers
    , dex1:dex-onchain
    , dex1:dex-server-lib
    , atlas-cardano
    , mtl
    , plutus-simple-model
    , tasty

test-suite betref-tests
  import:         betref-common
  ghc-options:    -threaded -rtsopts
  ghc-options: -haddock 
  type:           exitcode-stdio-1.0
  main-is:        betref-tests.hs
  hs-source-dirs: tests
  other-modules:
    BetRef.Tests.PlaceBet
    BetRef.Tests.TakeBetPot

  build-depends:
    , base
    , containers
    , dex1:betref-onchain
    , dex1:betref-server-lib
    , atlas-cardano
    , mtl
    , plutus-simple-model
    , tasty

test-suite dex-privnet-tests
  import:         dex-common
  type:           exitcode-stdio-1.0
  ghc-options:    -threaded -rtsopts
  ghc-options: -haddock 
  hs-source-dirs: tests-privnet
  main-is:        dex-privnet-tests.hs
  other-modules:
    Dex.Tests.Privnet.Tests

  build-depends:
    , base
    , dex1:dex-onchain
    , dex1:dex-server-lib
    , atlas-cardano
    , tasty
    , tasty-hunit


test-suite betref-privnet-tests
  import:         betref-common
  type:           exitcode-stdio-1.0
  ghc-options:    -threaded -rtsopts
  ghc-options: -haddock 
  hs-source-dirs: tests-privnet
  main-is:        betref-privnet-tests.hs
  other-modules:
    BetRef.Tests.Privnet.Tests

  build-depends:
    , base
    , dex1:betref-onchain
    , dex1:betref-server-lib
    , atlas-cardano
    , tasty
    , tasty-hunit
